Bug 97491 - [BAT SNB] Missing switch case (16) in gen6_check_mailbox_status dmesg WARNING by intel_pm
Summary: [BAT SNB] Missing switch case (16) in gen6_check_mailbox_status dmesg WARNING...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 97826 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-26 10:22 UTC by Jari Tahvanainen
Modified: 2016-09-16 07:49 UTC (History)
2 users (show)

See Also:
i915 platform: SNB
i915 features: power/runtime PM


Attachments
dmesg (boot) (71.33 KB, text/plain)
2016-08-26 10:22 UTC, Jari Tahvanainen
no flags Details
dmesg (test execution) (6.83 MB, text/plain)
2016-08-26 10:25 UTC, Jari Tahvanainen
no flags Details

Description Jari Tahvanainen 2016-08-26 10:22:43 UTC
Created attachment 126051 [details]
dmesg (boot)

On the latest CI execution round (IGT-Version: 1.15-g3a3c0fa (x86_64) (Linux: 4.8.0-rc3-CI-CI_DRM_1589+ x86_64)) one can see this same dmesg on several cases:

./drv_hangman --run-subtest error-state-basic
- last success: 
"IGT-Version: 1.15-g3a3c0fa (x86_64) (Linux: 4.8.0-rc3-CI-CI_DRM_1588+ x86_64)
Subtest error-state-basic: SUCCESS (10.372s)"

./drv_module_reload_basic
- has been failing for ~week

./gem_exec_suspend --run-subtest basic-S3
- has been failing for ~week

./gem_ringfill --run-subtest basic-default-forked
- last success: 
"IGT-Version: 1.15-g65a9987 (x86_64) (Linux: 4.8.0-rc3-CI-CI_DRM_1587+ x86_64)
Subtest basic-default-forked: SUCCESS (1.600s)"

./kms_pipe_crc_basic --run-subtest hang-read-crc-pipe-A
- last success: 
"IGT-Version: 1.15-g65a9987 (x86_64) (Linux: 4.8.0-rc3-CI-CI_DRM_1586+ x86_64)
hang-read-crc-pipe-A: Testing connector VGA-1 using pipe A
hang-read-crc-pipe-A: Testing connector HDMI-A-1 using pipe A
hang-read-crc-pipe-A: Testing connector VGA-1 using pipe A
hang-read-crc-pipe-A: Testing connector HDMI-A-1 using pipe A
Subtest hang-read-crc-pipe-A: SUCCESS (11.900s)"

./kms_pipe_crc_basic --run-subtest hang-read-crc-pipe-B
- last success:
"IGT-Version: 1.15-g65a9987 (x86_64) (Linux: 4.8.0-rc3-CI-CI_DRM_1586+ x86_64)
hang-read-crc-pipe-B: Testing connector VGA-1 using pipe B
hang-read-crc-pipe-B: Testing connector HDMI-A-1 using pipe B
hang-read-crc-pipe-B: Testing connector VGA-1 using pipe B
hang-read-crc-pipe-B: Testing connector HDMI-A-1 using pipe B
Subtest hang-read-crc-pipe-B: SUCCESS (12.426s)"

./kms_pipe_crc_basic --run-subtest suspend-read-crc-pipe-A
- has been failing for ~week

./kms_pipe_crc_basic --run-subtest suspend-read-crc-pipe-B
- has been failing for ~week

Here is copy-paste from dmesg related to ./drv_hangman - and as attachment there is full dmesg files (one for boot and another igt execution) for this same case.

Detail	Value
Returncode	0
Time	0:00:11.043401
Stdout	
IGT-Version: 1.15-g3a3c0fa (x86_64) (Linux: 4.8.0-rc3-CI-CI_DRM_1589+ x86_64)
Subtest error-state-basic: SUCCESS (10.895s)
Stderr	
Environment	
PIGLIT_PLATFORM="mixed_glx_egl" PIGLIT_SOURCE_DIR="/opt/igt/piglit"
Command	/opt/igt/tests/drv_hangman --run-subtest error-state-basic
dmesg	
[  157.742584] drm/i915: Resetting chip after gpu hang
[  157.744617] ------------[ cut here ]------------
[  157.744641] WARNING: CPU: 5 PID: 9238 at drivers/gpu/drm/i915/intel_pm.c:7760 sandybridge_pcode_write+0x141/0x200 [i915]
[  157.744642] Missing switch case (16) in gen6_check_mailbox_status
[  157.744642] Modules linked in: snd_hda_intel i915 ax88179_178a usbnet mii x86_pkg_temp_thermal intel_powerclamp coretemp crct10dif_pclmul crc32_pclmul ghash_clmulni_intel snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic snd_hda_codec snd_hwdep snd_hda_core mei_me lpc_ich snd_pcm mei broadcom bcm_phy_lib tg3 ptp pps_core [last unloaded: vgem]
[  157.744658] CPU: 5 PID: 9238 Comm: drv_hangman Tainted: G     U  W       4.8.0-rc3-CI-CI_DRM_1589+ #1
[  157.744658] Hardware name: Dell Inc. XPS 8300  /0Y2MRG, BIOS A06 10/17/2011
[  157.744659]  0000000000000000 ffff88011f093a98 ffffffff81426415 ffff88011f093ae8
[  157.744662]  0000000000000000 ffff88011f093ad8 ffffffff8107d2a6 00001e50810d3c9f
[  157.744663]  ffff880128680000 0000000000000008 0000000000000000 ffff88012868a650
[  157.744665] Call Trace:
[  157.744669]  [<ffffffff81426415>] dump_stack+0x67/0x92
[  157.744672]  [<ffffffff8107d2a6>] __warn+0xc6/0xe0
[  157.744673]  [<ffffffff8107d30a>] warn_slowpath_fmt+0x4a/0x50
[  157.744685]  [<ffffffffa0029831>] sandybridge_pcode_write+0x141/0x200 [i915]
[  157.744697]  [<ffffffffa002a88a>] intel_enable_gt_powersave+0x64a/0x1330 [i915]
[  157.744712]  [<ffffffffa006b4cb>] ? i9xx_emit_request+0x1b/0x80 [i915]
[  157.744725]  [<ffffffffa0055ed3>] __i915_add_request+0x1e3/0x370 [i915]
[  157.744738]  [<ffffffffa00428bd>] i915_gem_do_execbuffer.isra.16+0xced/0x1b80 [i915]
[  157.744740]  [<ffffffff811a232e>] ? __might_fault+0x3e/0x90
[  157.744752]  [<ffffffffa0043b72>] i915_gem_execbuffer2+0xc2/0x2a0 [i915]
[  157.744753]  [<ffffffff815485b7>] drm_ioctl+0x207/0x4c0
[  157.744765]  [<ffffffffa0043ab0>] ? i915_gem_execbuffer+0x360/0x360 [i915]
[  157.744767]  [<ffffffff810ea4ad>] ? debug_lockdep_rcu_enabled+0x1d/0x20
[  157.744769]  [<ffffffff811fe09e>] do_vfs_ioctl+0x8e/0x680
[  157.744770]  [<ffffffff811a2377>] ? __might_fault+0x87/0x90
[  157.744771]  [<ffffffff811a232e>] ? __might_fault+0x3e/0x90
[  157.744773]  [<ffffffff810d3df2>] ? trace_hardirqs_on_caller+0x122/0x1b0
[  157.744774]  [<ffffffff811fe6cc>] SyS_ioctl+0x3c/0x70
[  157.744776]  [<ffffffff8180fe69>] entry_SYSCALL_64_fastpath+0x1c/0xac
[  157.744777] ---[ end trace db67199eb0eabf0b ]---
Comment 1 Jari Tahvanainen 2016-08-26 10:25:03 UTC
Created attachment 126052 [details]
dmesg (test execution)
Comment 2 Jari Tahvanainen 2016-08-26 10:59:46 UTC
I browsed through git log and found out the following

commit 5bc6abe7674d9cf41dbcdaaf98a19184da181439
Author:     Lyude <cpaul@redhat.com>
AuthorDate: Wed Aug 17 15:55:53 2016 -0400
Commit:     Jani Nikula <jani.nikula@intel.com>
CommitDate: Mon Aug 22 16:07:29 2016 +0300

    drm/i915/gen6+: Interpret mailbox error flags

which aligns with the start of the symptoms on SNB.
Comment 3 yann 2016-08-26 12:12:16 UTC
Fix is landing here https://patchwork.freedesktop.org/series/11607/
Comment 4 Chris Wilson 2016-08-26 17:17:00 UTC
commit 7850d1c35344c7bd6a357240f2f9f60fc2c097b5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Aug 26 11:59:26 2016 +0100

    drm/i915: Add GEN7_PCODE_MIN_FREQ_TABLE_GT_RATIO_OUT_OF_RANGE to SNB
Comment 5 Jani Nikula 2016-09-16 07:49:58 UTC
*** Bug 97826 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.